--- a/src/components/FilterMenu/FilterDate/FilterDate.module.scss
+++ b/src/components/FilterMenu/FilterDate/FilterDate.module.scss
@@ -28,6 +28,12 @@
     right: -80%;
 }
 
+.line {
+    height: 2px;
+    width: 30px;
+    background-color: rgb(255, 255, 255);
+}
+
 /* 
 .dateBlock {
     cursor: pointer;
