--- a/src/components/Drawer/Drawer.module.scss
+++ b/src/components/Drawer/Drawer.module.scss
@@ -1,5 +1,3 @@
-.wrapper {}
-
 .main {
     position: fixed;
     width: 100vw;
@@ -7,30 +5,18 @@
     z-index: 4;
     top: 0;
     left: 0;
-
-    &.blackout {
-        transition: 1s border;
-        border: 1px solid red;
-        background-color: rgba(0, 0, 0, 0.192);
-    }
-
-    @media screen and (max-width:500px) {
-        width: 85%;
-        gap: 20px;
-    }
+    // border: 1px solid red;
 }
 
 .content {
     display: flex;
     flex-direction: column;
     gap: 30px;
-    // border: 1px solid red;
     position: relative;
     padding: 20px;
     overflow: hidden;
     background-color: #33363D;
     max-width: 700px;
-    width: 70%;
     height: 100%;
 }
 
@@ -45,5 +31,43 @@
     &:hover {
         transition: scale 0.23s;
         scale: 1.2;
+    }
+}
+
+
+@media screen and (max-width:600px) {
+
+    .wrapper {
+        width: 500px !important;
+    }
+
+    .main {
+        width: 500px;
+
+        // border: 1px solid red;
+    }
+
+    .content {
+        padding: 29px 0;
+    }
+
+    .cancelBtn {
+        top: 0.8%;
+    }
+
+}
+
+@media screen and (max-width:600px) {
+
+    .wrapper {
+        width: 500px !important;
+    }
+
+    .main {
+        width: 90% !important;
+    }
+
+    .content {
+        padding: 29px 0;
     }
 }
