--- a/src/components/FullPost/FullPost.module.scss
+++ b/src/components/FullPost/FullPost.module.scss
@@ -1,42 +1,31 @@
 .wrapper {
     display: flex;
     flex-direction: column;
-    gap: 30px;
+    gap: 16px;
 }
 
 .main {
     display: flex;
-    justify-content: space-between;
-    gap: 20px;
 }
 
 .head {
+    padding: 10px;
+    max-width: 400px;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
-    /* border: 1px solid red; */
-    width: fit-content;
 
-    // gap: 20px;
     &__tagsBlock {
-        margin-top: 20px;
         display: flex;
-        padding: 3px 0;
-        gap: 7px;
+        gap: 4px;
+        padding: 5px 0;
     }
 
-    &__title {
-        width: 50%;
-        // border: 1px solid red;
-        display: flex;
-        flex-direction: column;
-        justify-content: space-between;
-    }
+    &__title {}
 
     &__footer {
         display: flex;
-        flex-direction: column;
-        gap: 10px;
+        gap: 16px;
     }
 
     &__author {
@@ -60,10 +49,10 @@
     position: relative;
     overflow: hidden;
 
-    & image {
+    img {
         object-fit: cover;
-        width: 100px;
-        height: 100px;
+        width: 100%;
+        height: 100%;
     }
 }
 
@@ -96,4 +85,55 @@
         scale: 1.2;
         transition: scale 0.2s;
     }
+}
+
+//////////////////////////////////////////////////////////////////////////////
+
+
+@media screen and (max-width: 1030px) {
+
+    .wrapper {}
+
+    .main {}
+
+    .head {
+        width: 50%;
+    }
+
+}
+
+@media screen and (max-width: 660px) {
+
+    .wrapper {
+        // border: 1px solid red;
+    }
+
+    .main {
+        // border: 1px solid red;
+        align-items: center;
+        display: flex;
+        flex-direction: column;
+    }
+
+    .head {
+        width: 100%;
+
+        &__tagsBlock {}
+
+        &__title {}
+
+        &__footer {}
+    }
+
+    .textBlock {
+        padding: 0 10px;
+    }
+
+    .imgBlock {
+        width: 90%;
+        height: 200px;
+
+        img {}
+    }
+
 }
