--- a/src/components/PostItem/PostItem.module.scss
+++ b/src/components/PostItem/PostItem.module.scss
@@ -7,11 +7,10 @@
     box-shadow: 5px 5px 10px 0px rgba(0, 0, 0, 0.20);
 
     &:hover {
-        & .imgBlock {
-            &__image {
-                height: 90%;
-                width: 90%;
-            }
+
+        img {
+            transition: transform 0.5s;
+            transform: scale(1.1);
         }
     }
 
@@ -27,14 +26,6 @@
     &__image {
         object-fit: cover;
         transition: transform 0.3s;
-    }
-
-    &:hover {
-
-        & img {
-            transition: transform 0.3s;
-            transform: scale(1.2);
-        }
     }
 }
 
