--- a/src/components/UI/Input/Input.module.scss
+++ b/src/components/UI/Input/Input.module.scss
@@ -1,33 +1,35 @@
 .main {
-    // width: 100%;
-    // max-width: 726px;
-    width: 80vw;
-    max-width: 726px;
-    min-width: 200px;
-    background-color: #33363D;
-    height: 40px;
-    padding: 10px;
-    color: white;
-    border-radius: 5px;
     display: flex;
-    align-items: center;
-    justify-content: space-between;
-    // border: 1px solid red;
+    flex-direction: column;
 
-    & input {
-        // background-color: inherit;
-        // width: 95%;
-        width: 100%;
+    // input::-webkit-outer-spin-button,
+    // input::-webkit-inner-spin-button {
+    //     -webkit-appearance: none;
+    //     margin: 0;
+    // }
 
-        &:focus {
-            background-color: #33363D;
-        }
-    }
-
-    &__eyeblock {   
+    &__eyeblock {
         cursor: pointer;
         top: 0;
         right: 0;
         z-index: 11;
+    }
+}
+
+.inpBlock {
+    display: flex;
+    align-items: center;
+    // border: 1px solid red;
+    background-color: #33363D;
+    height: 40px;
+    border-radius: 10px;
+    width: 80vw;
+    max-width: 726px;
+
+    input {
+        border: none !important;
+        border-radius: 3px;
+        width: 100%;
+        height: 60%;
     }
 }
