--- a/src/global.scss
+++ b/src/global.scss
@@ -29,6 +29,12 @@ body {
       width: 0;
     }
   }
+  input:-webkit-autofill,
+input:-webkit-autofill:hover, 
+input:-webkit-autofill:focus, 
+input:-webkit-autofill:active{
+    -webkit-box-shadow: 0 0 0 30px  #33363D  inset !important;
+}
 }
 
 button,
