--- a/src/components/FilterMenu/FilterMenu.module.scss
+++ b/src/components/FilterMenu/FilterMenu.module.scss
@@ -16,3 +16,12 @@
     align-items: center;
     gap: 20px;
 }
+
+@media screen and (max-width: 800px) {
+
+    .main {
+        padding: 30px 10px;
+    }
+
+    .filterBlock {}
+}
