--- a/src/components/FilterMenu/FilterSelect/FilterSelect.module.scss
+++ b/src/components/FilterMenu/FilterSelect/FilterSelect.module.scss
@@ -1,22 +1,21 @@
 .main {
-    // border: 1px solid red;
+    height: 50px;
     width: 101%;
-    padding: 11px 0;
     background-color: #667A98;
     border-radius: 6px;
     display: flex;
     flex-direction: column;
-    // align-items: center;
-    // margin-left: 20px    ;
+    justify-content: center;
     position: relative;
     cursor: pointer;
     z-index: 20;
 
     &__btnBlock {
         display: flex;
-        margin-left: 20px;
-        gap: 20px;
+        margin-left: 5px;
+        gap: 10px;
         align-items: center;
+        overflow: hidden;
     }
 
     & p {
@@ -29,10 +28,22 @@
     position: absolute;
     top: 32%;
     right: 2%;
+
+    svg {
+        transition: transform 0.2s;
+        transform: rotate(0);
+    }
+
+    &.rotate {
+        svg {
+            transition: transform 0.2s;
+            transform: rotate(180deg);
+        }
+    }
+
 }
 
 .selection {
-    // border: 1px solid red;
     width: 100%;
     position: absolute;
     background-color: rgb(30, 30, 30);
@@ -55,23 +66,21 @@
 }
 
 .tagsBlock {
-    // position: absolute;
     display: flex;
-    gap: 10px;
+    gap: 6px;
+
+    &__name {
+        padding-left: 20px;
+    }
 }
-
-
 
 @media screen and (max-width: 500px) {
     .main {
-        // border: 1px solid red;
         height: 34px;
         padding: 0;
-        // align-items: center;
         justify-content: center;
 
         &__btnBlock {
-            // border: 1px solid red;
             margin-left: 10px;
         }
 
@@ -79,10 +88,15 @@
             font-size: 12px;
         }
     }
+}
+
+////////////////////////////////////////
 
 
+@media screen and (max-width: 750px) {
+    .main {}
 
-    .arrowDownIcon {}
+    .selection {}
 
     .tagsBlock {}
 }
